style.css
body {
    font-family: monospace;
    margin: 0;
    background-color: #f2f1ec;
}


/* ------------------------------------------------------------------------------ */
/* Website Navbar */

nav {
    margin: 0;
    padding: 10px;
    background-color: rgba(0, 0, 0, 0.2);
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 1000;
}

nav a {
    margin-left: 10px;
    margin-right: 30px;
    color: #d9d9d9;
    text-decoration: none;
    font-size: 18px;
    transition: font-weight 0.3s;
}

/* Change tab when the user hover */
nav a:hover {
    font-weight: bold;
    /* transform: scale(1.1); */
}



/* Coin-icon Animation and Style */
@keyframes spin {
    0% {
        transform: rotateY(0deg);
    }

    100% {
        transform: rotateY(360deg);
    }
}

.rotatingIcon {
    width: 30px;
    height: 30px;
    animation: spin 5s linear infinite;
    transform-style: preserve-3d;
    margin-right: 30px;
}

nav img {
    margin-left: auto;
}

/* ------------------------------------------------------------------------------ */
/* Parallax Animation */

.parallaxContainer {
    position: relative;
    width: 100%;
    height: 100vh;
    overflow: hidden;
}

/* Parallax background stays fixed */
.parallaxBg {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-image: url(assets/images/Virtual\ Coins\ Explorer.png);
    background-position: center;
    background-size: cover;
    z-index: -1; 
}

/* Parallax image style */
.parallaxImage {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-image: url(assets/images/falling-coins.png); 
    background-size: cover; 
    background-position: center;
    z-index: 1; 
    transition: transform 0.1s ease-out; 
}

/* ------------------------------------------------------------------------------ */
/* Coins Navbar */

.navbar {
    width: 600px;
    margin: 40px auto;
    border: 1px solid grey;
    border-radius: 4px;
    padding: 10px;
    background-color: #f2f1ec;
}

/* Coins Buttons */

.coinCheckbox {
    display: none;
}

.coinCheckbox:checked + label.eurBtn {
    border: 2px solid #4caf50; 
}

.coinCheckbox:checked + label.usdBtn {
    border: 2px solid #4caf50;
}

.coinCheckbox:checked + label.ilsBtn {
    border: 2px solid #4caf50;
}

.eurBtn, .usdBtn, .ilsBtn {
    width: 30px;
    height: 30px;
    border-radius: 50%;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    cursor: pointer;
    position: relative;
    transition: transform 0.3s ease;
    border: 1px solid #fff; 
    margin-top: 5px;
}

.eurBtn {
    background-image: url('assets/images/european-union-flag.png');
}

.usdBtn {
    background-image: url('assets/images/usa-flag.png');
}

.ilsBtn {
    background-image: url('assets/images/israel-flag.png');
}

.eurBtn:hover, .usdBtn:hover, .ilsBtn:hover {
    transform: scale(1.1);
    border: 1px solid black;
}

/* Tooltip */
.eurBtn::after, .usdBtn::after, .ilsBtn::after {
    content: attr(data-tooltip);
    position: absolute;
    top: -32px; 
    left: 50%;
    transform: translateX(-50%);
    padding: 5px;
    background-color: #333;
    color: white;
    border-radius: 4px;
    font-size: 12px;
    opacity: 0;
    visibility: hidden;
    transition: opacity 0.3s ease;
    z-index: 1;
}

.eurBtn:hover::after, .usdBtn:hover::after, .ilsBtn:hover::after {
    opacity: 1;
    visibility: visible;
}

.eurBtn:hover::after, .usdBtn:hover::after, .ilsBtn:hover::after {
    visibility: visible;
    opacity: 1;
    transition: opacity 0.3s ease;
}

.roundBtn {
    position: relative;
}

/* Input Box */
.input-field {
    width: 240px;
    height: 30px;
    padding: 10px;
    border-radius: 4px;
    border: 1px solid grey;
    outline: none; 
    margin-left: 10px;
}

/* Clear Button */
.clearBtn {
    width: 80px;
    height: 30px;
    padding: 10px;
    display: flex;
    justify-content: center; 
    align-items: center; 
    text-align: center; 
    background-color: #293c8c;
    color: white;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    transition: transform 0.3s ease;
}

.clearBtn:hover {
    transform: scale(1.02); 
    border: 1px solid black;
}

.clearSelectionBtn {
    width: 120px;
    height: 30px;
    padding: 10px;
    display: flex;
    justify-content: center; 
    align-items: center; 
    text-align: center; 
    background-color: #293c8c;
    color: white;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    transition: transform 0.3s ease;
}

.clearSelectionBtn:hover {
    transform: scale(1.02); 
    border: 1px solid black;
}

/* ------------------------------------------------------------------------------ */
/* Cards and Container */
#cardsContainer {
    display: grid;
    grid-template-columns: repeat(4, 1fr); 
    gap: 20px;
    width: 80%;
    margin: 20px auto;
    min-height: 300px;
    position: relative;
}

.card {
    background-color: #f0f0f0;
    padding: 20px;
    border-radius: 8px;
    text-align: center;
    transition: transform 0.3s ease;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 100%;
    height: 150px; 
    position: relative; 
}

.infoBtn {
    width: 100%; 
    height: 30px; 
    background-color: #293c8c;
    color: white;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    text-align: center; 
    transition: transform 0.3s ease;
    font-size: 14px;
}

.infoBtn:hover {
    transform: scale(1.05); 
}

.coinIdentity {
    display: flex;
    align-items: flex-start;
    gap: 10px; 
}

.coinImage {
    display: flex;
    justify-content: center; 
}

.coinImage img {
    width: 30px; 
    height: 30px; 
    flex-shrink: 0; 
}

.coinInfo {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    text-align: left; 
}

.symbolSpan {
    color: black;
    font-size: 16px;
    font-weight: bold;
    margin-top: -7px; 
}

.symbolName {
    color: rgba(0, 0, 0, 0.5);
    font-size: 14px;
    word-wrap: break-word;
    margin-top: -1px;
}

.coinPrice span {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center; 
}

/* Toggle Switch */
.form-check {
    position: absolute; 
    top: 10px; 
    right: 10px;
}

.form-check-input:checked {
    background-color: #293c8c; 
    border-color: #293c8c; 
}


.form-check-input:focus {
    box-shadow: none; 
    outline: none; 
}

/* ------------------------------------------------------------------------------ */
/* Modal */
.modalContainer{
    display: none;
    align-items: center;
    justify-content: center;
    position: fixed;
    top: 0;
    left: 0;
    height: 100vh;
    width: 100vw;
    background-color: rgba(0, 0, 0, 0.8);
    z-index: 1000;
}

.modal-content {
    background-color: #fff;
    width: 600px;
    max-width: 100%;
    padding: 10px;
    border-radius: 5px;
    box-shadow: 0 2px 4px rgb(0, 0, 0, 0.2);
    text-align: center;
}

.modal-content h2 {
    font-weight: bold;
    font-size: 24px;
}

.modal-content p {
    font-size: 14px;
    color: rgba(0, 0, 0, 0.6);
}

.modal-content button {
    width: 100px; 
    height: 30px; 
    background-color: #293c8c;
    color: white;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    text-align: center; 
    transition: transform 0.3s ease;
    font-size: 14px;
}

.modal-content button:hover {
    transform: scale(1.05); 
}

.modal-buttons {
    display: flex;
    justify-content: center;
    gap: 40px;
    margin-top: 20px;
}

#selectedCoinsList {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin: 0 40px;
}

#selectedCoinsList div {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    gap: 10px; 
    color: rgba(0, 0, 0, 0.7);
}


.checkboxContainer {
    display: flex;
    align-items: center;
    padding: 5px;
    margin-bottom: 10px;
    transition: background-color 0.3s ease;
    cursor: pointer; 
    width: 100%; 
  }
  
  .checkboxContainer:hover {
    background-color: #e0e0e0;
    border-radius: 4px; 
  }
  

  .checkboxContainer label {
    display: block; 
    width: 100%; 
    margin-left: 10px; 
    text-align: left;
  }
  
  .checkboxContainer input[type="checkbox"]:checked + label {
    color: #007bff; 
  }
  
  #errorModalDiv{
    display: none;
    color: red;
    margin: 0 auto;
  }


  /* Dynamic Search */

  #noResultsContainer{
    width: 100%;
    height: 150px;
    display: none;
    text-align: center;
    top: 0;
    min-height: 300px;
    position: absolute;
  }


  /* About */

  .aboutSite, .aboutCreator {
    display: flex;
    align-items: center; 
    gap: 20px; 
    margin: 20px 0; 
}

.aboutSite .aboutImg {
    order: -1; 
}

.aboutCreator .aboutImg {
    order: 1; 
}

.aboutSite p, .aboutCreator p {
    margin: 0; 
    line-height: 1.6; 
}

.aboutSite p {
    text-align: left; 
}

.aboutCreator {
    justify-content: flex-end; 
}

.aboutCreator p {
    text-align: left; 
}

.aboutImg {
    width: 200px; 
    height: auto; 
    border-radius: 8px; 
}

/* About Adjust to small display */
@media (max-width: 768px) {
    .aboutSite, .aboutCreator {
        flex-direction: column;
        align-items: center; 
        gap: 10px; 
    }

    .aboutImg {
        width: 150px; 
    }

    .aboutSite p, .aboutCreator p {
        text-align: center; 
    }

    .aboutCreator .aboutImg {
        order: -1; 
    }
}

@media (max-width: 480px) {
    .aboutImg {
        width: 120px; 
    }

    .aboutSite, .aboutCreator {
        gap: 5px; 
    }
}

/* Live Reports */

.reportsContainer {
    width: 100%;
    height: 100%; 
    display: flex;
    justify-content: center; 
    align-items: center; 
    padding: 20px; 
    box-sizing: border-box; 
}

#chartContainer {
    height: 300px; 
    width: 100%;
}

